# ml-housing-project

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  app.py  requirements.txt
frontend/: Dockerfile  streamlit_app.py
notebooks/: 02_train_and_version.ipynb
scripts/: check_project_structure.py
src/common/: features.py
src/ml_housing/: data.py  evaluate.py  features.py  pipeline.py  train.py
src/ml_housing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prediction/: config.py  model_loader.py  predict.py  schemas.py
src/training/: data.py  evaluate.py  pipeline.py  train.py
tests/: test_data.py  test_features.py  test_pipeline.py
